fix news view link area overflow

--- a/titleCards/NewsCards.css
+++ b/titleCards/NewsCards.css
@@ -128,15 +128,30 @@
     display: flex;
 }
 
-.news-view-container a {
+@media screen and (max-width: 800px) {
+    .news-view-container > a,
+    .news-view-container > .title-card-img-container {
+        width: 100% !important;
+    }
+}
+
+.news-view-container > a,
+.news-view-container > .title-card-img-container {
+    width: 80%;
+    height: auto;
+
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    transition: 0.4s ease;
 }
 
 .news-view-container img {
-    width: 80%;
-    height: auto;
+    width: 100%;
+
+    transition: 0.4s ease;
 }
 
 .news-card-container > .title-card-content {
